# cfkiller-v3

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
cfkiller/config/: settings.py
cfkiller/core/: attacker.py
cfkiller/core/browser/: manager.py  stealth.py
cfkiller/core/http2/: rapid_reset.py
cfkiller/core/http2/__pycache__/: rapid_reset.cpython-313.py
cfkiller/core/swarm/: worker.py
cfkiller/core/tls/: utils_client.py  utls_client.py
cfkiller/observer/: metrics.py  reporter.py
cfkiller/proxy/: manager.py
cfkiller/utils/: limits.py
examples/: run_rapid.py  run_spoof.py
tests/: test_rapid_reset.py  test_rapid_reset_stats.py
tests/.github/workflows/: ci.yalm  pre-commit-config.yaml
ui/: dashboard.py
