# pyproject.toml
[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cfkiller"
version = "4.0.0"
description = "Framework profesional de stress testing HTTP/2 + Cloudflare bypass"
authors = ["Tu Nombre <tu@email.com>"]
license = "Private"
readme = "README.md"
homepage = "https://github.com/tuusuario/cfkiller"
repository = "https://github.com/tuusuario/cfkiller"
keywords = ["pentest", "redteam", "cloudflare", "http2", "rapid-reset"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Intended Audience :: Information Technology"
]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12"}
curl-cffi = "^0.7.0b4"
h2 = "^4.1.0"
undetected-playwright = "^0.5.0"
playwright = "^1.48"
streamlit = "^1.38"
weasyprint = "^62.0"
jinja2 = "^3.1"
psutil = "^6.0"
prometheus-client = "^0.20"
structlog = "^24.4"
aiohttp = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
black = "^24.8"
ruff = "^0.6"
pre-commit = "^3.8"
hypothesis = "^6.111"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"